--- a/dedsec/README
+++ b/dedsec/README
@@ -16,9 +16,5 @@ To install a new theme, simply copy it to /root/themes/, or /mmc/root/themes/ (C
 
 ## Preview Pictures
 
-![Screenshot](https://raw.githubusercontent.com/Ser0ka88/hak5-pager-dedsec-theme/main/dedsec/assets/dashboard/deadsec_r_bg.png?raw=1)
+<img width="747" height="528" alt="new_main_dashboard" src="https://raw.githubusercontent.com/Ser0ka88/hak5-pager-dedsec-theme/main/dedsec/assets/dashboard/deadsec_r_bg.png" />
 
-
-![Screenshot](https://raw.githubusercontent.com/Ser0ka88/hak5-pager-dedsec-theme/main/preview-pictures/alerts.png?raw=1)
-
-![Screenshot](https://raw.githubusercontent.com/Ser0ka88/hak5-pager-dedsec-theme/main/dedsec/assets/payloads_dashboard/payloads_bg.png?raw=1)
